<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showType"
        android:text="@string/confirm_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346" />

    <TextView
        android:id="@+id/txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_ticket_txv"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.112" />

    <RadioGroup
        android:id="@+id/ticketType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/ticketNum"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ticketNum">

        <RadioButton
            android:id="@+id/adult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adult"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/child"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/senior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/senior"
            android:textSize="20sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/ticketNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74">

        <RadioButton
            android:id="@+id/buyOneTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticket_num1"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/buyTwoTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticket_num"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/buyThreeTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticket_num3"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/buyFourTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticket_num4"
            android:textSize="20sp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>